# audio-separator

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml
macos/: Info.plist
scripts/: create-app-bundle.sh
src/: audio_io.rs  gui.rs  lib.rs  main.rs  model_manager.rs  separator.rs
